# MarshallBot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.tunnel.yml  docker-compose.yml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  tasks.py  worker.py
backend/app/core/: config.py  dedupe.py  deployment.py  runtime_config.py  scoring.py  source_config.py  tunnel.py
backend/app/db/: apply_schema.py  connection.py  migrations.py  queries.py  repository.py  schema.sql
backend/app/services/: admin_dashboard.py  alerting.py  backfill.py  collector_registry.py  connectors.py  decision.py  dexscreener.py  discovery.py  enrichment.py  export.py  extractor.py  filters.py  launchpad_adapters.py  orchestration.py  (+14 more)
backend/config/: sources.json
backend/scripts/: __init__.py  check_tunnel_deployment.py  generate_telegram_session.py  get_chat_id.py  open_tunnel_dashboard.py  print_tunnel_url.py  release_check.py  verify_deployment.py
backend/tests/: test_alerting.py  test_backfill.py  test_check_tunnel_deployment.py  test_connectors.py  test_cooldown.py  test_dashboard.py  test_dedupe.py  test_delivery_ready.py  test_deployment_checks.py  test_extractor.py  test_filters.py  test_filters_and_enrichment.py  test_launchpad_adapters.py  test_open_tunnel_dashboard.py  test_orchestration.py  test_pipeline.py  test_pumpfun.py  test_release_check.py  test_runtime_config.py  test_scoring.py  test_selection.py  test_source_config.py  test_sources_api.py  test_telegram_research.py  test_tunnel.py
(+8 files in other folders)
